@@ -1,0 +1,35 @@
+/*
+ * Copyright 2022 Branko Juric, Brady Wood
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package gwen.core.init
+
+import gwen.core._
+
+/**
+  * No-op implementtion of project initialister.
+  */
+trait NoopProjectInitialiser extends ProjectInitialiser {
+
+  /**
+    * This implementation does nothing.
+    *
+    * @param isNew true if the project is new, false otherwise
+    * @param standalone true if initialising a standalone project, false otherwise
+    * @param options Gwen options
+    */
+  override def init(isNew: Boolean, standalone: Boolean, options: GwenOptions): Unit = { }
+  
+}
